--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,31 @@
 button {
   font-size: calc(10px + 2vmin);
 }
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+body {
+  padding: 0 6rem;
+  margin: 0;
+}
+h4 {
+  font-size: 1rem;
+  color: rgb(56, 56, 56);
+}
+h3 {
+  font-size: 1.5rem;
+  color: rgb(56, 56, 56);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+a {
+  color: rgb(56, 56, 56);
+}
+.p2 {
+  font-size: 10px !important;
+  line-height: 10px;
+} */
